force-app/main/default/objects/Quote_Item__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This fields allows you to add additional costs to your Total.</inlineHelpText>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>