force-app/main/default/objects/Quote_Item__c/fields/Applied_Markup__c.field-meta.xml
<CustomField>
    <fullName>Applied_Markup__c</fullName>
    <description>Comes from the Line Item Markup or the Grouping Markup.  If there is a Markup at the Grouping level and not at the line item level, then it pulls from the Grouping level, otherwise the Line Item Markup overrides the Grouping level Markup.</description>
    <inlineHelpText>Comes from the Line Item Markup or the Grouping Markup.  If there is a Markup at the Grouping level and not at the line item level, then it pulls from the Grouping level, otherwise the Line Item Markup overrides the Grouping level Markup.</inlineHelpText>
    <label>Group Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>