force-app/main/default/objects/Quote_Item__c/fields/Base_Location__c.field-meta.xml
<CustomField>
    <fullName>Base_Location__c</fullName>
    <label>Base Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>