force-app/main/default/objects/Quote_Item__c/fields/BOM_Line__c.field-meta.xml
<CustomField>
    <fullName>BOM_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Line</label>
    <referenceTo>Select_Sheet__c</referenceTo>
    <relationshipLabel>BT Quote Lines</relationshipLabel>
    <relationshipName>BT_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>