force-app/main/default/objects/Quote_Item__c/fields/BOM_Tax__c.field-meta.xml
<CustomField>
    <fullName>BOM_Tax__c</fullName>
    <formula>Sales_Tax_Amount_Manual__c /    Total_Pre_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOM Tax (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>