force-app/main/default/objects/Quote_Item__c/fields/Build_Phase__c.field-meta.xml
<CustomField>
    <fullName>Build_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Phase</label>
    <referenceTo>Build_Phase__c</referenceTo>
    <relationshipLabel>BT Quote Lines</relationshipLabel>
    <relationshipName>BT_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>