force-app/main/default/objects/Quote_Item__c/fields/Division_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Division_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>BT Quote Lines</relationshipLabel>
    <relationshipName>BT_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>