force-app/main/default/objects/Quote_Item__c/fields/Location_Detail_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail_Reference_1__c</fullName>
    <label>Location Detail Reference 1</label>
    <length>225</length>
    <type>Text</type>
</CustomField>