force-app/main/default/objects/Quote_Item__c/fields/Location_Detailed_Area__c.field-meta.xml
<CustomField>
    <fullName>Location_Detailed_Area__c</fullName>
    <label>Location Detailed Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Vanity</fullName>
            </value>
            <value>
                <fullName>Tub</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Premium Unit</fullName>
            </value>
            <value>
                <fullName>Standard Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>