force-app/main/default/objects/Quote_Item__c/fields/Location_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Location_Picklist__c</fullName>
    <label>Location (PL)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bathroom 2</fullName>
            </value>
            <value>
                <fullName>Bathroom 3</fullName>
            </value>
            <value>
                <fullName>Bedroom 2</fullName>
            </value>
            <value>
                <fullName>Bedroom 3</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Master Bathroom</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Powder Room</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Exterior Wall Mount</fullName>
            </value>
            <value>
                <fullName>Master Closet</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Dinning Room</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>LAUNDRY &amp; BATH FANS</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>DRYER &amp; RANGE VENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>