force-app/main/default/objects/Quote_Item__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <inlineHelpText>If this field is populated it will override the Unit Sales Price value by calculating the Sales Price based on the Margin (%) you enter.</inlineHelpText>
    <label>Margin (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>