force-app/main/default/objects/Quote_Item__c/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <formula>Net_Total_Price__c -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>