force-app/main/default/objects/Quote_Item__c/fields/Margin_To_Markup__c.field-meta.xml
<CustomField>
    <fullName>Margin_To_Markup__c</fullName>
    <formula>( (Margin__c /(1-Margin__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin To Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>