force-app/main/default/objects/Quote_Item__c/fields/Markup_to_Margin__c.field-meta.xml
<CustomField>
    <fullName>Markup_to_Margin__c</fullName>
    <formula>Margin_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup to Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>