force-app/main/default/objects/Quote_Item__c/fields/Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Price__c</fullName>
    <formula>Total_Cost__c  +  Additional_Costs__c + Markup_Amount__c + Tax_Amount__c- Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SubTotal +Additional, Discount, Markup and Taxes.</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>