force-app/main/default/objects/Quote_Item__c/fields/Sales_Tax_Amount_Manual__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Amount_Manual__c</fullName>
    <inlineHelpText>Sales Tax value from the BOM/Takeoff Line.</inlineHelpText>
    <label>Sales Tax Amount (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>