force-app/main/default/objects/Quote_Item__c/fields/SubTotal_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Sales_Price__c</fullName>
    <formula>Quantity__c *  Net_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>