force-app/main/default/objects/Quote_Item__c/fields/Total_Pre_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pre_Tax_Amount__c</fullName>
    <formula>Total_Cost__c + Markup_Amount__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pre-Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>