force-app/main/default/objects/Quote_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Quote Item Unit Price</description>
    <inlineHelpText>List Price from the Product record.</inlineHelpText>
    <label>List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>